--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^2.6.0",
     "@nuxtjs/router": "^1.5.0",
-    "blockstack": "^19.3.0",
+    "blockstack": "19.3.0",
     "cors": "^2.8.5",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
